extern/PICM114GL/include/PCI_M114.h

// 4-Axis Linear Move
I16 PASCAL _m114_start_tr_line4(U16 SwitchCardNo, I32 DistX, I32 DistY, I32 DistZ, I32 DistU, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_start_ta_line4(U16 SwitchCardNo, I32 PosX, I32 PosY, I32 PosZ, I32 PosU, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_start_sr_line4(U16 SwitchCardNo, I32 DistX, I32 DistY, I32 DistZ, I32 DistU, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_start_sa_line4(U16 SwitchCardNo, I32 PosX, I32 PosY, I32 PosZ, I32 PosU, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_start_tr_line4_abcd(U16 SwitchCardNo, I32 DistA, I32 DistB, I32 DistC, I32 DistD, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_start_ta_line4_abcd(U16 SwitchCardNo, I32 PosA, I32 PosB, I32 PosC, I32 PosD, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_start_sr_line4_abcd(U16 SwitchCardNo, I32 DistA, I32 DistB, I32 DistC, I32 DistD, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_start_sa_line4_abcd(U16 SwitchCardNo, I32 PosA, I32 PosB, I32 PosC, I32 PosD, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
// Circular Move
I16 PASCAL _m114_get_center(U16 SwitchCardNo, I32 Sx, I32 Sy, I32 Ex, I32 Ey, I32 Radius, U8 Dir, I32 *Cx, I32 *Cy);
I16 PASCAL _m114_start_tr_arc2(U16 SwitchCardNo, U16 *AxisArray, I32 OffsetCx, I32 OffsetCy, I32 OffsetEx, I32 OffsetEy, U8 Dir, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_start_ta_arc2(U16 SwitchCardNo, U16 *AxisArray, I32 Cx, I32 Cy, I32 Ex, I32 Ey, U8 Dir, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_start_sr_arc2(U16 SwitchCardNo, U16 *AxisArray, I32 OffsetCx, I32 OffsetCy, I32 OffsetEx, I32 OffsetEy, U8 Dir, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_start_sa_arc2(U16 SwitchCardNo, U16 *AxisArray, I32 Cx, I32 Cy, I32 Ex, I32 Ey, U8 Dir, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_start_tr_arc_xy(U16 SwitchCardNo, I32 OffsetCx, I32 OffsetCy, I32 OffsetEx, I32 OffsetEy, U8 Dir, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_start_ta_arc_xy(U16 SwitchCardNo, I32 Cx, I32 Cy, I32 Ex, I32 Ey, U8 Dir, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_start_sr_arc_xy(U16 SwitchCardNo, I32 OffsetCx, I32 OffsetCy, I32 OffsetEx, I32 OffsetEy, U8 Dir, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_start_sa_arc_xy(U16 SwitchCardNo, I32 Cx, I32 Cy, I32 Ex, I32 Ey, U8 Dir, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_start_tr_arc_zu(U16 SwitchCardNo, I32 OffsetCz, I32 OffsetCu, I32 OffsetEz, I32 OffsetEu, U8 Dir, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_start_ta_arc_zu(U16 SwitchCardNo, I32 Cz, I32 Cu, I32 Ez, I32 Eu, U8 Dir, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_start_sr_arc_zu(U16 SwitchCardNo, I32 OffsetCz, I32 OffsetCu, I32 OffsetEz, I32 OffsetEu, U8 Dir, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_start_sa_arc_zu(U16 SwitchCardNo, I32 Cz, I32 Cu, I32 Ez, I32 Eu, U8 Dir, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_start_tr_arc_ab(U16 SwitchCardNo, I32 OffsetCa, I32 OffsetCb, I32 OffsetEa, I32 OffsetEb, U8 Dir, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_start_ta_arc_ab(U16 SwitchCardNo, I32 Ca, I32 Cb, I32 Ea, I32 Eb, U8 Dir, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_start_sr_arc_ab(U16 SwitchCardNo, I32 OffsetCa, I32 OffsetCb, I32 OffsetEa, I32 OffsetEb, U8 Dir, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_start_sa_arc_ab(U16 SwitchCardNo, I32 Ca, I32 Cb, I32 Ea, I32 Eb, U8 Dir, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_start_tr_arc_cd(U16 SwitchCardNo, I32 OffsetCc, I32 OffsetCd, I32 OffsetEc, I32 OffsetEd, U8 Dir, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_start_ta_arc_cd(U16 SwitchCardNo, I32 Cc, I32 Cd, I32 Ec, I32 Ed, U8 Dir, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_start_sr_arc_cd(U16 SwitchCardNo, I32 OffsetCc, I32 OffsetCd, I32 OffsetEc, I32 OffsetEd, U8 Dir, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_start_sa_arc_cd(U16 SwitchCardNo, I32 Cc, I32 Cd, I32 Ec, I32 Ed, U8 Dir, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
// Cylinder Surface Move
I16 PASCAL _m114_start_tr_arc_xyz(U16 SwitchCardNo, I32 OffsetCx, I32 OffsetCy, I32 OffsetEx, I32 OffsetEy, I32 DistZ, U8 Dir, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_start_ta_arc_xyz(U16 SwitchCardNo, I32 Cx, I32 Cy, I32 Ex, I32 Ey, I32 PosZ, U8 Dir, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_start_tr_arc_abc(U16 SwitchCardNo, I32 OffsetCa, I32 OffsetCb, I32 OffsetEa, I32 OffsetEb, I32 DistC, U8 Dir, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
I16 PASCAL _m114_start_ta_arc_abc(U16 SwitchCardNo, I32 Ca, I32 Cb, I32 Ea, I32 Eb, I32 PosC, U8 Dir, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec);
// Counter Control
I16 PASCAL _m114_get_position(U16 SwitchCardNo, U16 AxisNo, I32 *pos);
I16 PASCAL _m114_set_position(U16 SwitchCardNo, U16 AxisNo, I32 pos);
I16 PASCAL _m114_get_command(U16 SwitchCardNo, U16 AxisNo, I32 *cmd);
I16 PASCAL _m114_set_command(U16 SwitchCardNo, U16 AxisNo, I32 cmd);
I16 PASCAL _m114_get_error_counter(U16 SwitchCardNo, U16 AxisNo, I16 *error);
I16 PASCAL _m114_reset_error_counter(U16 SwitchCardNo, U16 AxisNo);
I16 PASCAL _m114_get_general_counter(U16 SwitchCardNo, U16 AxisNo, I32 *CntValue);
I16 PASCAL _m114_set_general_counter(U16 SwitchCardNo, U16 AxisNo, I16 CntSrc, I32 CntValue);
I16 PASCAL _m114_get_target_pos(U16 SwitchCardNo, U16 AxisNo, I32 *pos);
I16 PASCAL _m114_set_target_pos(U16 SwitchCardNo, U16 AxisNo, I32 pos);
// Ring Counter
I16 PASCAL _m114_enable_command_ring_counter(U16 SwitchCardNo, U16 AxisNo, U32 RingCounter);
I16 PASCAL _m114_disable_command_ring_counter(U16 SwitchCardNo, U16 AxisNo);
I16 PASCAL _m114_enable_position_ring_counter(U16 SwitchCardNo, U16 AxisNo, U32 RingCounter);
I16 PASCAL _m114_disable_position_ring_counter(U16 SwitchCardNo, U16 AxisNo);
// Soft Limit
I16 PASCAL _m114_set_soft_limit(U16 SwitchCardNo, U16 AxisNo, I32 PLimit, I32 NLimit);
I16 PASCAL _m114_enable_soft_limit(U16 SwitchCardNo, U16 AxisNo, I16 Action);
I16 PASCAL _m114_disable_soft_limit(U16 SwitchCardNo, U16 AxisNo);
// Counter Latch
I16 PASCAL _m114_set_ltc_logic(U16 SwitchCardNo, U16 AxisNo, I16 ltc_logic);
I16 PASCAL _m114_get_latch_data(U16 SwitchCardNo, U16 AxisNo, I16 LatchNo, I32 *Pos);
// Counter Comparator
I16 PASCAL _m114_set_general_comparator(U16 SwitchCardNo, U16 AxisNo, I16 CmpSrc, I16 CmpMethod, I16 CmpAction, I32 Data);
I16 PASCAL _m114_check_compare_data(U16 SwitchCardNo, U16 AxisNo, I16 CompType, I32 *Pos);
I16 PASCAL _m114_check_compare_status(U16 SwitchCardNo, U16 AxisNo, U16 *cmp_sts);
// Counter Comparator Trigger Out (Axis 2 & 3)
I16 PASCAL _m114_enable_trigger_comparator(U16 SwitchCardNo, U16 AxisNo, U8 CmpSrc, U8 CmpMethod , I32 CmpData);
I16 PASCAL _m114_disable_trigger_comparator(U16 SwitchCardNo, U16 AxisNo);
I16 PASCAL _m114_get_trigger_available_buffer(U16 SwitchCardNo, U16 AxisNo, U8 *buffer);
I16 PASCAL _m114_add_trigger_comparator(U16 SwitchCardNo, U16 AxisNo, I32 CmpData);
I16 PASCAL _m114_cancel_trigger_buffer(U16 SwitchCardNo, U16 AxisNo);