extern/PICM114GL/include/PCI_M114.cs


            // 4-Axis Linear Move
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_tr_line4(ushort SwitchCardNo, int DistX, int DistY, int DistZ, int DistU, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_ta_line4(ushort SwitchCardNo, int PosX, int PosY, int PosZ, int PosU, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_sr_line4(ushort SwitchCardNo, int DistX, int DistY, int DistZ, int DistU, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_sa_line4(ushort SwitchCardNo, int PosX, int PosY, int PosZ, int PosU, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_tr_line4_abcd(ushort SwitchCardNo, int DistA, int DistB, int DistC, int DistD, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_ta_line4_abcd(ushort SwitchCardNo, int PosA, int PosB, int PosC, int PosD, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_sr_line4_abcd(ushort SwitchCardNo, int DistA, int DistB, int DistC, int DistD, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_sa_line4_abcd(ushort SwitchCardNo, int PosA, int PosB, int PosC, int PosD, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            // Circular Move
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_get_center(ushort SwitchCardNo, int Sx, int Sy, int Ex, int Ey, int Radius, byte Dir, ref int Cx, ref int Cy);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_tr_arc2(ushort SwitchCardNo, ushort[] AxisArray, int OffsetCx, int OffsetCy, int OffsetEx, int OffsetEy, byte Dir, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_ta_arc2(ushort SwitchCardNo, ushort[] AxisArray, int Cx, int Cy, int Ex, int Ey, byte Dir, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_sr_arc2(ushort SwitchCardNo, ushort[] AxisArray, int OffsetCx, int OffsetCy, int OffsetEx, int OffsetEy, byte Dir, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_sa_arc2(ushort SwitchCardNo, ushort[] AxisArray, int Cx, int Cy, int Ex, int Ey, byte Dir, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_tr_arc_xy(ushort SwitchCardNo, int OffsetCx, int OffsetCy, int OffsetEx, int OffsetEy, byte Dir, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_ta_arc_xy(ushort SwitchCardNo, int Cx, int Cy, int Ex, int Ey, byte Dir, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_tr_arc_zu(ushort SwitchCardNo, int OffsetCz, int OffsetCu, int OffsetEz, int OffsetEu, byte Dir, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_ta_arc_zu(ushort SwitchCardNo, int Cz, int Cu, int Ez, int Eu, byte Dir, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_sr_arc_xy(ushort SwitchCardNo, int OffsetCx, int OffsetCy, int OffsetEx, int OffsetEy, byte Dir, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_sa_arc_xy(ushort SwitchCardNo, int Cx, int Cy, int Ex, int Ey, byte Dir, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_sr_arc_zu(ushort SwitchCardNo, int OffsetCz, int OffsetCu, int OffsetEz, int OffsetEu, byte Dir, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_sa_arc_zu(ushort SwitchCardNo, int Cz, int Cu, int Ez, int Eu, byte Dir, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_tr_arc_ab(ushort SwitchCardNo, int OffsetCa, int OffsetCb, int OffsetEa, int OffsetEb, byte Dir, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_ta_arc_ab(ushort SwitchCardNo, int Ca, int Cb, int Ea, int Eb, byte Dir, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_sr_arc_ab(ushort SwitchCardNo, int OffsetCa, int OffsetCb, int OffsetEa, int OffsetEb, byte Dir, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_sa_arc_ab(ushort SwitchCardNo, int Ca, int Cb, int Ea, int Eb, byte Dir, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_tr_arc_cd(ushort SwitchCardNo, int OffsetCc, int OffsetCd, int OffsetEc, int OffsetEd, byte Dir, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_ta_arc_cd(ushort SwitchCardNo, int Cc, int Cd, int Ec, int Ed, byte Dir, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_sr_arc_cd(ushort SwitchCardNo, int OffsetCc, int OffsetCd, int OffsetEc, int OffsetEd, byte Dir, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_sa_arc_cd(ushort SwitchCardNo, int Cc, int Cd, int Ec, int Ed, byte Dir, uint StrVel, uint MaxVel, float Tacc, float Tdec);

            // Cylinder Surface Move
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_tr_arc_xyz(ushort SwitchCardNo, int OffsetCx, int OffsetCy, int OffsetEx, int OffsetEy, int DistZ, byte Dir, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_ta_arc_xyz(ushort SwitchCardNo, int Cx, int Cy, int Ex, int Ey, int PosZ, byte Dir, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_tr_arc_abc(ushort SwitchCardNo, int OffsetCa, int OffsetCb, int OffsetEa, int OffsetEb, int DistC, byte Dir, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_ta_arc_abc(ushort SwitchCardNo, int Ca, int Cb, int Ea, int Eb, int PosC, byte Dir, uint StrVel, uint MaxVel, float Tacc, float Tdec);

            // Counter Control
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_get_position(ushort SwitchCardNo, ushort AxisNo, ref int pos);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_set_position(ushort SwitchCardNo, ushort AxisNo, int pos);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_get_command(ushort SwitchCardNo, ushort AxisNo, ref int cmd);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_set_command(ushort SwitchCardNo, ushort AxisNo, int cmd);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_get_error_counter(ushort SwitchCardNo, ushort AxisNo, ref short error);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_reset_error_counter(ushort SwitchCardNo, ushort AxisNo);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_get_general_counter(ushort SwitchCardNo, ushort AxisNo, ref int CntValue);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_set_general_counter(ushort SwitchCardNo, ushort AxisNo, short CntSrc, int CntValue);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_get_target_pos(ushort SwitchCardNo, ushort AxisNo, ref int pos);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_set_target_pos(ushort SwitchCardNo, ushort AxisNo, int pos);

            // Ring Counter
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_enable_command_ring_counter(ushort SwitchCardNo, ushort AxisNo, uint RingCounter);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_disable_command_ring_counter(ushort SwitchCardNo, ushort AxisNo);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_enable_position_ring_counter(ushort SwitchCardNo, ushort AxisNo, uint RingCounter);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_disable_position_ring_counter(ushort SwitchCardNo, ushort AxisNo);

            // Soft Limit
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_set_soft_limit(ushort SwitchCardNo, ushort AxisNo, int PLimit, int NLimit);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_enable_soft_limit(ushort SwitchCardNo, ushort AxisNo, short Action);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_disable_soft_limit(ushort SwitchCardNo, ushort AxisNo);

            // Counter Latch
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_set_ltc_logic(ushort SwitchCardNo, ushort AxisNo, short ltc_logic);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_get_latch_data(ushort SwitchCardNo, ushort AxisNo, short LatchNo, ref int Pos);

            // Counter Comparator
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_set_general_comparator(ushort SwitchCardNo, ushort AxisNo, short CmpSrc, short CmpMethod, short CmpAction, int Data);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_check_compare_data(ushort SwitchCardNo, ushort AxisNo, short CompType, ref int Pos);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_check_compare_status(ushort SwitchCardNo, ushort AxisNo, ref ushort cmp_sts);

            // Counter Comparator Trigger Out(Axis 2 & 3)            
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_enable_trigger_comparator(ushort SwitchCardNo, ushort AxisNo, byte CmpSrc, byte CmpMethod, int CmpData);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_disable_trigger_comparator(ushort SwitchCardNo, ushort AxisNo);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_get_trigger_available_buffer(ushort SwitchCardNo, ushort AxisNo, ref byte buffer);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_add_trigger_comparator(ushort SwitchCardNo, ushort AxisNo, int CmpData);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_cancel_trigger_buffer(ushort SwitchCardNo, ushort AxisNo);
